compiler-skeleton/tests/compile-error/function_no_return.ln
def fn2(z:bool):bool{
	z = true;
}
